# Agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  conda_dependencies.yml  docker-compose.yml  pyproject.toml  set_env.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_notes_table.py
deploy/: .dockerignore  Dockerfile  docker-compose.yml
docs/: HOW-TO.md  TECHNICAL.md
eval/: __init__.py  benchmark_dataset.json  report.json  run_eval.py
regression/: README.md  cases.json  config.json  report.json  run_regression.py
src/: __init__.py  agent.py  chroma_client.py  cli.py  main.py  notepad_rag.py
src/agent/: __init__.py  file_ingest.py  graph.py  llm.py  plugins.py  prompts.py  session.py  tools.py
src/config/: __init__.py  config.json
src/core/: __init__.py  embeddings.py  exceptions.py  logging.py  semantic.py  tracing.py
src/observability/: __init__.py  core.py  trace_store.py
src/responsible_ai/: __init__.py  bias_evaluator.py  config.py  content_filter.py  fairness.py  guardrails.py  nemo_rails.py  pii_detector.py  testset_validator.py  transparency.py
src/server/: __init__.py  api.py  mcp.py  registry.py  session_store.py
src/server/static/: regression_runs.css  regression_runs.html  (+4 more)
src/store/: __init__.py  chroma_store.py  db.py  factory.py  file_store.py  sql_store.py
tests/: test_api.py  test_config.py  test_file_ingest.py  test_mcp_registry.py  test_notepad_rag.py  test_redteam.py  test_responsible_ai.py  test_session_store_plugins.py  test_store.py  test_testset_validator.py
